# bb_gui

./: .gitignore  README.md  bb_gui.py  functions_data_and_pipeline.py  main.py  pyproject.toml
bb_gui/: bb_gui.py  functions_acquisition.py  functions_data_and_pipeline.py
